--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.31"
 
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 log = "0.4"
