--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ thiserror = "1.0.31"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+tempfile = "3.3"
+
 log = "0.4"
 
 [dev-dependencies]
