--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.31"
 
+non-blank-string-rs = { git = "https://github.com/lebe-dev/non-blank-string-rs", version = "1.0.0", features = ["utils"] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
