--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.31"
 
-non-blank-string-rs = { git = "https://github.com/lebe-dev/non-blank-string-rs", version = "1.0.0", features = ["utils"] }
+non-blank-string-rs = { git = "https://github.com/lebe-dev/non-blank-string-rs", version = "1.0.0" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -20,3 +20,5 @@ log = "0.4"
 [dev-dependencies]
 env_logger = "0.8"
 fake = "2"
+
+non-blank-string-rs = { git = "https://github.com/lebe-dev/non-blank-string-rs", version = "1.0.0", features = ["utils"] }
